test: refactor and add tests